# Mbaurekso_curug

./: .gitignore  README.md  pyproject.toml  requirements.txt
assets/: mbaurekso.avif
src/vas/: config.py  db_manager.py  detection.py  detection_pipeline.py  main.py  model_loader.py
src/vas/alerts/: alert_manager.py
src/vas/tracking/: person_tracker.py
src/vas/ui/: alert_panel.py  aoi_dialog.py  settings_dialog.py  stats_panel.py  theme.py
src/vas/utils/: geometry.py  screen_capture.py  throttle.py  timeFmt.py
src/visitor_alert_system.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_geometry.py
